# tushare_db

./: .env.example  .gitignore  CLAUDE.md  RUNBOOK.md  a-ai-ai-tushare-pro-kind-gizmo.md  a-final-mile-plan-for-qwen.md  a-frontend-dashboard-spec.md  a-future-development-blueprint.md  a-implementation-handoff-guide.md  a-remediation-plan-for-qwen.md  a-remediation-plan-v2-for-qwen.md  check_all_failed.py  check_freshness.py  check_interface_state.py  check_missing_params.py  check_overall_state.py  check_param_samples.py  check_running.py  clear_sync_state_16.py  create_missing_tables.py  docker-compose.test.yml  docker-compose.yml  f-aicoding-space-projects-tushare-hub-do-declarative-dragonfly.md  fix_schema_columns.py  pyproject.toml  resume_all_fixed.py  resume_per_symbol.py  resume_r2.py  resume_r3.py  resume_r4.py  resume_r5.py  resume_specific.py  retry_comprehensive.py  retry_dividend.py  retry_final.py  retry_v2.py  serial_backfill.py  sync_config_from_mcp.py  test_cn_pmi.py  tushare_10k_interfaces.md  (+1 more)
Tushare_DB_Web/: app.jsx  audit.jsx  charts.jsx  dashboard.jsx  data-viewer.jsx  data.jsx  index.html  interfaces.jsx  scheduler.jsx  settings.jsx  theme.jsx  verify.jsx
config/: settings.yaml
dashboard/: index.html  nginx.conf
docs/: BUGFIX_20260429.md  DATABASE_STATUS_20260430.md  FIX_PLAN_20260429.md  MCP_CONFIG_ANALYSIS_20260429.md  POST_FIX_VERIFICATION_20260430.md  REMAINING_ISSUES_20260429.md  REMEDIATION_PLAN_20260430.md  REPORT_20260429.md  ROOT_CAUSE_ANALYSIS_20260430.md
docs_archive/: ARCHITECTURE_REVIEW.md  README.md  TODO_discussion.md  (+2 more)
(+347 files in other folders)
