[project]
name = "tushare-db"
version = "0.1.0"
description = "Tushare Pro A-share local data warehouse on ClickHouse"
requires-python = ">=3.11"
dependencies = [
  "tushare>=1.4.20",
  "clickhouse-connect>=0.7.19",
  "httpx[http2]>=0.27",
  "apscheduler>=3.10.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "ruamel.yaml>=0.18",
  "click>=8.1",
  "rich>=13.7",
  "structlog>=24.1",
  "tenacity>=8.3",
  "pandas>=2.2",
  "pyarrow>=16.0",
  "lz4>=4.3",
  "xxhash>=3.4",
  "mcp>=1.0",
  "python-dotenv>=1.0",
  "prometheus-client>=0.20",
  "pytz>=2024.1",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "responses>=0.25",
  "vcrpy>=6.0",
  "testcontainers[clickhouse]>=4.5",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
tushare-db = "tushare_db.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tushare_db"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
